# ahs-paycheque-extraction

./: .editorconfig  .gitignore  Paycheque Information.xlsx  README.md  pyproject.toml
extract/: .config.env  __main__.py
extract/utils/: __init__.py  extraction.py  saving.py  utils.py
