[tool.poetry]
name = "ahs-paycheque-extraction"
version = "0.1.0"
description = "Extracts details from AHS paycheque PDF"
authors = ["Study Buffalo <joshua@torrance.io>"]
license = "GNU GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "*"
pdfminer = "*"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
